# casu-beaglebone

./: .gitignore  .gitmodules  BeagleboneSetup.md  CMakeLists.txt  README.md  Toolchain-arm-linux-gnueabihf.cmake
Beaglebone2PIC/: .cproject  .project
Beaglebone2PIC/src/: I2CSlavePIC.h
airflow/: valveController.py
airsense_cfg/: airsense_bridge.cfg  airsense_ring.cfg
beaglebone2pic/: BBBInterface.cpp  BBBInterface.h  CASU_Interface.cpp  CASU_Interface.h  CMakeLists.txt  TestApp.cpp  airsense_fw.cpp  main.cpp  mainApp.cpp
beaglebone2pic/src/: I2CSlavePIC.cpp  main.cpp
calibration/: casu-009.cal
config/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc  casu-005.fbc  casu-006.fbc  casu-007.fbc  casu-008.fbc  casu-009.fbc  rc.local.template  template.fbc
config/bbg-001/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-002/: casu-001.fbc  casu-002.fbc
config/bbg-003/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-004/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-005/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-006/: casu-001.fbc  casu-002.fbc  casu-003.fbc
config/bbg-007/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-008/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-009/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-010/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-011/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-012/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-013/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-014/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-015/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
config/bbg-016/: casu-001.fbc  casu-002.fbc  casu-003.fbc  casu-004.fbc
ehm/: ehm.cpp  ehm.h
i2c/: I2CDevice.cpp  I2CDevice.h  I2CSlavePIC.cpp  I2CSlavePIC.h  i2cDevice.cpp  i2cDevice.h  i2cSlaveMCU.cpp  i2cSlaveMCU.h  i2cSlavePIC.cpp  i2cSlavePIC.h
serial/: serial.cpp  serial.h
